# PhotoNet

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: comments.py  images.py  ratings.py  search.py  tags.py  transformed_images.py  users.py
src/routes/: auth.py  comments_routes.py  images.py  ratings.py  search.py  tags.py  transformed_images.py  users.py
src/schemas/: auth_schemas.py  comment_schemas.py  image_schemas.py  rating_schemas.py  tag_schemas.py  transformed_image_schemas.py  user_schemas.py
src/services/: auth.py  email.py  images.py  roles.py  transformed_image.py
src/services/templates/: email_template.html
static/: README.md  cover.css
templates/: index.html
tests/: conftest.py  test_main.py  test_rep_users.py  test_repo_images.py  test_repository_search.py  test_repository_transformed_images.py  test_rout_users.py  test_route_comment_routes.py  test_route_images.py  test_route_raitings.py  test_route_search.py  test_route_tags.py  test_route_transformed_images.py  test_service_images.py  test_services_transformed_image.py  tests_route_auth.py
