[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["iPlugin <real.andreychuk@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standart"], version = "^0.23.1"}
alembic = "^1.11.1"
jinja2 = "^3.1.2"
fastapi-mail = "^1.4.1"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^4.6.0"
cloudinary = "^1.33.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
fastapi-limiter = "^0.1.5"
fastapi = {extras = ["all"], version = "^0.100.0"}
sqladmin = "^0.13.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
sphinx = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]